Fixed grid size on small screens

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -276,26 +276,6 @@ footer div.content p
     padding-right: 20px;
 }
 
-@media screen and (min-width:600px) 
-{
-    .menu
-    {
-        width: 55%;
-    }   
-
-    footer div.content
-    {
-        flex-wrap:nowrap;
-        width: 50%;
-        margin: 0 auto;
-    }
-
-    footer div.content div:not(:first-child)
-    {
-        flex-basis: 30%;
-    }
-}
-
 footer ul
 {
     padding: 0;
@@ -334,7 +314,6 @@ footer a:hover
 .grid
 {
     margin: 0 auto;
-    width: 60%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -366,7 +345,7 @@ footer a:hover
 section .logos
 { 
     margin: 0 auto;
-    width: 40%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -454,4 +433,40 @@ section figure:hover {
 
 section figure:hover::after {
     opacity: 1;
+}
+
+@media screen and (min-width:600px) 
+{
+    .menu
+    {
+        width: 55%;
+    }   
+
+    footer div.content
+    {
+        flex-wrap:nowrap;
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    footer div.content div:not(:first-child)
+    {
+        flex-basis: 30%;
+    }
+}
+
+@media (min-width:1450px) 
+{
+    .grid
+    {
+        max-width: 70%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1450px) 
+{ 
+    .grid
+    {
+        max-width: 90%;
+    }
 }
